Keep planner candidates bound to exact placement domains
Candidate receipts now carry graph-owned emission facts so DP and MinST use the same legality, execution layout, materialization layout, and cost authority.

Constraint: runtime fallback forbidden; exact anchors only; scalar or unknown-shape FOUT is runtime-infeasible
Rejected: node-union state borrowing | it merges foreign input domains and execution/materialization layouts
Confidence: high
Scope-risk: moderate
Directive: preserve graph-owned state identity and separate execution FType from final materialization FType
Tested: Maven test-compile; exact-authority and MinST compatibility gates; DP private-aggregate KMeans, PCA, LogReg, and LM workloads
Not-tested: run_LAN.sh and run_LAN_docker.sh pending